# qwex

./: .air.toml  .env.example  .gitignore  .gitmodules  .restish.yaml  COMPONENTS.md  Cargo.toml  Dockerfile.runner  Justfile  LOGBOOK.md  PHASE_1_COMPLETE.md  README.md  compiled.sh  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  package.json  pyproject.toml  qwex.code-workspace  test.qwex.yaml  tsconfig.json
.github/: copilot-instructions.md
.opencode/agent/: qwex-specialist.md
.qwex/: .gitignore  config.yaml
.qwex/components/executors/: ssh.yaml
.qwex/scripts/: noop.sh  ssh.sh
apps/cli/: README.md  package.json
apps/cli/src/: index.ts
apps/controller/: README.md  main.go  pyproject.toml
apps/controller/config/: envconfig.go
apps/controller/routes/: authconfig.go  health.go  iam.go  index.go  machines.go  root.go
apps/controller/schemas/: machines.go
apps/controller/services/: root.go
apps/qwex/: Cargo.toml  pyproject.toml
apps/qwex-cli/: .gitignore  README.md  go.mod  main.go
apps/qwex-cli/cmd/: batch.go  root.go  ssh.go
apps/qwexcli/: README.md  pyproject.toml  qwex.yaml
apps/qwexcli/qwexcli/: __init__.py  _version.py  main.py
apps/qwexcli/qwexcli/commands/: __init__.py  cancel.py  init.py  list.py  logs.py  run.py  run_layers.py  utils.py
apps/qwexcli/qwexcli/lib/: __init__.py  agent.py  component.py  config.py  context.py  errors.py  init.py  plugin.py  project.py  runner.py  service.py  template.py
apps/qwexcli/qwexcli/plugins/: base.py
apps/qwexcli/qwexcli/registry/qwex/builtin/: ssh.yaml
apps/qwexcli/qwexcli/services/: project.py  run.py
apps/qwexcli/qwexcli/templates/storages/: git_direct.yaml
apps/qwexcli/tests/: test_bash_compilation.py  test_component.py  test_init.py  test_lib_init.py  test_qwex.py
apps/qwexcloud/: main.go
apps/qwexctl/: .air.toml  go.mod  go.sum  main.go
cmd/migrate/: main.go
docs/: configuration.md
examples/: workflow_example.yaml
examples/docker-hello-world/: hello.py  qwex.yaml
examples/hello/: hello.yaml
examples/kueue-hello-world/: README.md  cluster-queue.yaml  job.yaml  kustomization.yaml
examples/qwex-hello-world/: qwex.yaml
examples/test-docker-runner/: README.md  main.py  pyproject.toml  qwex.yaml
infra/: k3d-config.yaml  kind-config.yaml  qwex.yaml
infra/k3d/: config.yaml
infra/kueue/: kustomization.yaml
infra/lima/: README.md  agent.yaml  control.yaml  install-tailscale.sh  k3s-agent.yaml  k3s-control.yaml  k3s-server.yaml  setup-agent.sh  setup-control.sh  setup-kubeconfig.sh  setup-tailscale.sh  tailscale-up.sh
lib/pyqwxl/: Cargo.toml  pyproject.toml
lib/qstd/: log.yaml  module.yaml  ssh.yaml  std.yaml  steps.yaml  utils.yaml
lib/qwl/: pyproject.toml
lib/qwl/builtins/std/: log.yaml  steps.yaml  test.yaml  utils.yaml
lib/qwl/src/qwl/: __init__.py
lib/qwl/src/qwl/ast/: node.py  parser.py  spec.py  test_parser.py  test_spec.py
lib/qwl/src/qwl/compiler/: __init__.py  compiler.py  extensions.py  renderer.py  resolver.py  spec.py  test_compiler.py  test_shell_include.py
lib/qwl/src/qwl/tests/: test.yaml
lib/qwl/src/qwl/v2/: pipeline.py
lib/qwl/src/qwl/v2/ast/: __init__.py  parser.py  spec.py
lib/qwl/tests/: test_parser.py
lib/qwxl/: Cargo.toml
lib/qwxl/src/: pipeline.rs
lib/qwxl/src/builtins/: log.yaml
lib/qwxl/src/pipeline/: ast.rs  cache.rs  context.rs  emitter.rs  error.rs  loader.rs  parser.rs  renderer.rs  resolver.rs
lib/qwxl/src/pipeline/builtins/: log.yaml  steps.yaml  test.yaml  utils.yaml
lib/qwxl/src/pipeline/templates/: script.sh.j2
lib/qwxl/src/pipeline/tests/: sample.yaml
pkg/client/: gen.go  openapi.json
pkg/db/: db.go  migrate.go
pkg/k8s/: client.go  jobs.go  kueue.go
pkg/kv/: errors.go  kv.go  valkey.go
pkg/qapi/: api.go
pkg/qart/: errors.go  s3.go  store.go
pkg/qauth/: claims.go  claims_test.go
pkg/qerr/: qerr.go
pkg/qlog/: logger.go
pkg/qrunner/: ARCHITECTURE.md  DESIGN_DECISIONS.md  REFACTORING_PROPOSAL.md  container_config.go  docker.go  docker_test.go  interface.go  k8s.go  local.go  local_test.go
pkg/qsdk/: auth.go  claims.go  claims_test.go  config.go  config_test.go  sdk.go  token.go
pkg/runner/: interface.go  local.go
playground/: qwex.yaml  test.yaml
playground/docker/: qwex.yaml
playground/eval/: qwex.yaml
playground/hello-world/: qwex.py  qwex.ts  qwex.yaml
playground/lifecycle/: qwex.yaml
playground/local-ssh-docker-k8s/: manual.vars.yaml  qwex.yaml
playground/module-inline/: qwex.yaml  test.yaml
playground/module-run/: qwex.yaml  test.yaml
playground/module-uses-with/: qwex.yaml  test.yaml
playground/module_inline/: qwex.yaml
playground/module_run_usage/: qwex.yaml
playground/opencode-eval/: Dockerfile  docker-compose.yaml  qwex.yaml
playground/pytorch-inference/: qwex.yaml
playground/pytorch-inference/project/: .gitignore  main.py  pyproject.toml  qwex.yaml
playground/pytorch-inference/project/modules/: code.yaml  driver.yaml  lifecycle.yaml
playground/ssh-boundary/: qwex.yaml
playground/ssh-docker-k8s/: qwex.yaml
playground/task-with-args/: qwex.yaml  test.yaml
playground/task_with_args/: qwex.yaml
playground/uv-workspace/: qwex.yaml  source.sh  source3.sh
scripts/: core.sh  log.yaml  pwd.sh  ssh.sh  std.yaml  test.sh  test.yaml  test2.sh  test_core_runner.sh  trace.sh
src/qwml/: README.md  pyproject.toml
src/qwml/examples/: stacks.py
src/qwml/qwml/: __init__.py
src/qwml/qwml/engine/: __init__.py  compiler.py  layer.py
src/qwml/qwml/templates/: agent.sh.j2  docker.sh.j2  noop.sh.j2  singularity.sh.j2  slurm.sh.j2  ssh.sh.j2
src/qwml/tests/: test_compiler.py
src/qwp/: README.md  pyproject.toml
src/qwp/qwp/: __init__.py  config.py  exceptions.py  home.py  models.py  runner.py  store.py  workspace.py
src/qwp/qwp/core/: __init__.py  config.py  home.py  runner.py  script.py
src/qwp/qwp/layers/: __init__.py  docker.py  ssh.py
src/qwp/qwp/models/: __init__.py  run.py  status.py
src/qwp/qwp/runners/: __init__.py  base.py  docker.py  local.py
src/qwp/qwp/storage/: __init__.py  base.py  git.py
(+108 files in other folders)
