[project]
name = "qwex"
version = "0.1.0"
description = "Queued Workspace-aware EXection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["apps/qwexcli", "lib/qwl", "playground/uv-workspace/uv-workspace-demo", "playground/lifecycle/uv-workspace-demo"]
