[project]
name = "qwl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1.6", "pyyaml>=6.0.3", "msgspec>=0.17.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=9.0.2", "ruff>=0.14.8"]

[tool.pytest.ini_options]
python_functions = ["test_"]
python_files = ["test_*.py"]
testpaths = ["tests"]
