[package]
name = "qwxl"
version = "0.1.0"
edition = "2024"

[lib]
name = "qwxl"

[dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
minijinja = "2.14.0"
ron = "0.12.0"
saphyr = "0.0.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-saphyr = "0.0.11"
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.44"
