[package]
name = "qwxl"
version = "0.1.0"
edition = "2024"

[lib]
name = "qwxl"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
derive_more = { version = "2.1", features = ["full"] }
minijinja = "2.14"
ron = "0.12"
saphyr = "0.0.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-saphyr = "0.0.11"
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
