[project]
name = "qwml"
version = "0.1.0"
description = "Qwex Markup Language - composable shell layer compiler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
