[project]
name = "qwp"
version = "0.1.0"
description = "Qwex Protocol SDK - Run orchestration for ML workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "uuid7>=0.1.0", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qwp"]
